# little-factory

./: .gitignore  colorConfig.js  colorSystem.js
.github/workflows/: main.yml  tauri-build.yml
css/: layout.css
css/icons/: belt-icon.css
css/objects/: belt.css  items.css  jumper.css  packager.css  stopper.css
css/ui/: expand-buttons.css  menu.css  palette.css  preview.css  responsive.css
js/core/: achievements.js  baseTools.js  buttonUtils.js  dom.js  sound.js  state.js
js/game/: init.js  loop.js
js/menu/: lobby.js  menu.js
js/network/: game-room.js  peer-manager.js  protocol.js  sync.js
js/objects/: belt.js  colorer.js  jumper.js  packager.js  seller.js  stopper.js
js/ui/: controls.js  expansionButtons.js  palette.js  renderCells.js  renderItems.js
scripts/: sync-web.ps1  sync-web.sh
src-tauri/: Cargo.toml  tauri.conf.json
web/: colorConfig 2.js  colorConfig.js  index 2.html  index.html  style 2.css
web/css/: base.css  header.css  layout.css
web/css 2/: grid.css  header.css
web/css 2/ui/: controls-overlay.css  floating-text.css  zoom-indicator.css
web/css/objects/: color-classes.css  colorer.css  object-base.css  producer.css  seller.css  stopper.css
web/css/ui/: menu.css  responsive.css  sub-palette.css  tool-buttons.css
web/js 2/core/: config.js  icons.js
web/js 2/network/: peer-manager.js
web/js 2/objects/: producer.js  seller.js
web/js 2/ui/: controls.js  floatingText.js  speed.js  tooltip.js
web/js/core/: costs.js  factories.js  meta.js  sound.js  utils.js
web/js/game/: init.js  movement.js
web/js/menu/: chat.js  (+2 more)
(+13 files in other folders)
